--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,10 @@
 			"mkdir -p app/App/Models",
 			"mv app/models/User app/App/Models/User",
 			"mv app/storage ./storage",
-		  "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep readme.md CONTRIBUTING.md app/controllers app/commands app/models app/views/hello.php",
+		  "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep readme.md CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
 			"vendor/bin/php-cs-fixer fix app --fixers=-indentation",
+			"vendor/bin/codecept bootstrap app",
+			"mv app/codeception.yml ./codeception.yml",
 			"php artisan key:generate"
 		]
 	},
