--- a/composer.json
+++ b/composer.json
@@ -1,63 +1,66 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
-	"license": "MIT",
-	"type": "project",
-	"require": {
-	  "raveren/kint": "~0.9.1",
-		"laravel/framework": "4.2.*",
-		"rcrowe/twigbridge": "~0.6.1",
-		"anahkiasen/arrounded": "~0.3.1"
-	},
-	"require-dev": {
-	  "fabpot/php-cs-fixer": "~0.5",
-	  "way/generators": "~2.6.1",
-	  "codeception/codeception": "~2.0.5",
-	  "barryvdh/laravel-ide-helper": "~1.11.3"
-	},
-	"autoload": {
-		"classmap": [
-			"app/commands",
-			"app/database/migrations",
-			"app/database/seeds",
-			"app/tests/TestCase.php"
-		],
-		"psr-4": {
-		  "App\\": "app/App"
-		}
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-create-project-cmd": [
-			"mkdir -p app/App/Models",
-			"mv app/models/User app/App/Models/User",
-			"mv app/storage ./storage",
-		  "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep readme.md CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
-			"vendor/bin/php-cs-fixer fix app --fixers=-indentation",
-			"vendor/bin/codecept bootstrap app",
-			"mv app/codeception.yml ./codeception.yml",
-			"php artisan key:generate"
-		]
-	},
-	"repositories": [
-	  {
-		"type": "composer",
-		"url": "http://toran.dev/repo/packagist/"
-	  },
-	  {
-		"packagist": false
-	  }
-	],
-	"config": {
-		"preferred-install": "dist"
-	},
-	"minimum-stability": "stable"
+  "name": "laravel/laravel",
+  "description": "The Laravel Framework.",
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
+  "license": "MIT",
+  "type": "project",
+  "require": {
+    "raveren/kint": "~0.9.1",
+    "laravel/framework": "4.2.*",
+    "rcrowe/twigbridge": "~0.6.1",
+    "anahkiasen/arrounded": "~0.3.1"
+  },
+  "require-dev": {
+    "fabpot/php-cs-fixer": "~0.5",
+    "way/generators": "~2.6.1",
+    "codeception/codeception": "~2.0.5",
+    "barryvdh/laravel-ide-helper": "~1.11.3"
+  },
+  "autoload": {
+    "classmap": [
+      "app/commands",
+      "app/database/migrations",
+      "app/database/seeds",
+      "app/tests/TestCase.php"
+    ],
+    "psr-4": {
+      "App\\": "app/App"
+    }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php artisan clear-compiled",
+      "php artisan optimize"
+    ],
+    "post-update-cmd": [
+      "php artisan clear-compiled",
+      "php artisan optimize"
+    ],
+    "post-create-project-cmd": [
+      "mkdir -p app/App/Models",
+      "mv app/models/User app/App/Models/User",
+      "mv app/storage ./storage",
+      "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep readme.md CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
+      "vendor/bin/php-cs-fixer fix app --fixers=-indentation",
+      "vendor/bin/codecept bootstrap app",
+      "mv app/codeception.yml ./codeception.yml",
+      "php artisan key:generate"
+    ]
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "http://toran.dev/repo/packagist/"
+    },
+    {
+      "packagist": false
+    }
+  ],
+  "config": {
+    "preferred-install": "dist"
+  },
+  "minimum-stability": "stable"
 }
