--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
     "raveren/kint": "~0.9.1",
     "laravel/framework": "4.2.*",
     "rcrowe/twigbridge": "~0.6.1",
-    "anahkiasen/arrounded": "~0.3.1"
+    "anahkiasen/arrounded": "~0.3.2"
   },
   "require-dev": {
     "fabpot/php-cs-fixer": "~0.5",
     "way/generators": "~2.6.1",
     "codeception/codeception": "~2.0.5",
-    "barryvdh/laravel-ide-helper": "~1.11.3"
+    "barryvdh/laravel-ide-helper": "~1.11.3",
+    "doctrine/dbal": "~2.4",
+    "barryvdh/laravel-debugbar": "~1.7"
   },
   "autoload": {
     "classmap": [
