--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravel/laravel",
+  "name": "madewithlove/skeletor",
   "description": "The Laravel Framework.",
   "keywords": [
     "framework",
