--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
       "mkdir -p app/App/Models",
       "mv app/models/User.php app/App/Models/User.php",
       "mv app/storage ./storage",
-      "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep readme.md CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
+      "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
       "vendor/bin/codecept bootstrap app",
       "mv app/codeception.yml ./codeception.yml",
       "php artisan key:generate",
