--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
   "autoload": {
     "classmap": [
       "app/database/migrations",
-      "app/database/seeds",
-      "app/tests/TestCase.php"
+      "app/database/seeds"
     ],
     "psr-4": {
       "App\\": "app/App"
