Update Grunt stack

--- a/.grunt/.scss-lint.yml
+++ b/.grunt/.scss-lint.yml
@@ -48,7 +48,7 @@ linters:
   HexValidation:
     enabled: true
 
-  IdWithExtraneousSelector:
+  IdSelector:
     enabled: true
 
   ImportPath:
@@ -71,6 +71,7 @@ linters:
 
   NameFormat:
     enabled: true
+    allow_leading_underscore: true
     convention: hyphenated_lowercase # or 'BEM', or a regex pattern
 
   NestingDepth:
