--- a/package.json
+++ b/package.json
@@ -18,24 +18,23 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-csslint": "^0.3.1",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscss": "^0.6.2",
     "grunt-html-angular-validate": "^0.4.0",
     "grunt-newer": "^0.8.0",
-    "grunt-ng-annotate": "^0.7.0",
+    "grunt-ng-annotate": "^0.8.0",
     "grunt-phplint": "^0.0.5",
     "grunt-phpunit": "^0.3.5",
     "grunt-scss-lint": "^0.3.3",
     "grunt-shell": "^1.1.1",
     "grunt-styleguide": "^0.2.15",
-    "grunt-svgmin": "^2.0.0",
-    "grunt-tinypng": "^0.5.3",
     "grunt-tslint": "^1.0.1",
     "grunt-typescript": "^0.4.1",
-    "grunt-usemin": "^2.4.0",
-    "grunt-webfont": "^0.4.8",
+    "grunt-usemin": "^3.0.0",
+    "grunt-webfont": "^0.5.0",
     "jit-grunt": "^0.9.0",
     "tsd": "^0.5.7",
     "typescript": "^1.1.0-1"
