--- a/composer.json
+++ b/composer.json
@@ -2,58 +2,67 @@
   "name": "madewithlove/skeletor",
   "description": "The Laravel Framework.",
   "keywords": [
-    "framework",
-    "laravel"
+	"framework",
+	"laravel"
   ],
   "license": "MIT",
   "type": "project",
   "require": {
-    "raveren/kint": "~0.9",
-    "laravel/framework": "4.2.*",
-    "rcrowe/twigbridge": "~0.6",
-    "anahkiasen/arrounded": "~0.4.1",
-    "bugsnag/bugsnag-laravel": "~1.1"
+	"raveren/kint": "~0.9",
+	"laravel/framework": "4.2.*",
+	"rcrowe/twigbridge": "~0.6",
+	"anahkiasen/arrounded": "~0.4.1",
+	"bugsnag/bugsnag-laravel": "~1.1"
   },
   "require-dev": {
-    "fabpot/php-cs-fixer": "~1.2",
-    "way/generators": "~2.6",
-    "codeception/codeception": "~2.0",
-    "barryvdh/laravel-ide-helper": "~1.11",
-    "doctrine/dbal": "~2.4",
-    "barryvdh/laravel-debugbar": "~1.8"
+	"fabpot/php-cs-fixer": "~1.2",
+	"way/generators": "~2.6",
+	"codeception/codeception": "~2.0",
+	"barryvdh/laravel-ide-helper": "~1.11",
+	"doctrine/dbal": "~2.4",
+	"barryvdh/laravel-debugbar": "~1.8"
   },
   "autoload": {
-    "classmap": [
-      "app/database/migrations",
-      "app/database/seeds"
-    ],
-    "psr-4": {
-      "App\\": "app/App"
-    }
+	"classmap": [
+	  "app/database/migrations",
+	  "app/database/seeds"
+	],
+	"psr-4": {
+	  "App\\": "app/App"
+	}
   },
+  "repositories": [
+	{
+	  "type": "composer",
+	  "url": "http://toran.mwlhq.com/repo/packagist/"
+	},
+	{
+	  "packagist": false
+	}
+  ],
   "scripts": {
-    "post-install-cmd": [
-      "php artisan clear-compiled",
-      "php artisan optimize"
-    ],
-    "post-update-cmd": [
-      "php artisan clear-compiled",
-      "php artisan optimize"
-    ],
-    "post-create-project-cmd": [
-      "mkdir -p app/App/Models",
-      "mv app/models/User.php app/App/Models/User.php",
-      "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
-      "vendor/bin/codecept bootstrap app",
-      "mv app/codeception.yml ./codeception.yml",
-      "php artisan key:generate",
-      "curl -L http://bit.ly/vaprobash > Vagrantfile",
-      "git init",
-      "vendor/bin/php-cs-fixer fix app --fixers='-indentation'"
-    ]
+	"post-install-cmd": [
+	  "php artisan clear-compiled",
+	  "php artisan optimize"
+	],
+	"post-update-cmd": [
+	  "php artisan clear-compiled",
+	  "php artisan optimize"
+	],
+	"post-create-project-cmd": [
+	  "mkdir -p app/App/Models",
+	  "mv app/models/User.php app/App/Models/User.php",
+	  "rm -rf app/tests/ExampleTest.php app/database/seeds/.gitkeep CONTRIBUTING.md app/controllers app/tests/* app/commands app/models app/views/hello.php",
+	  "vendor/bin/codecept bootstrap app",
+	  "mv app/codeception.yml ./codeception.yml",
+	  "php artisan key:generate",
+	  "curl -L http://bit.ly/vaprobash > Vagrantfile",
+	  "git init",
+	  "vendor/bin/php-cs-fixer fix app --fixers='-indentation'"
+	]
   },
   "config": {
-    "preferred-install": "dist"
+	"preferred-install": "dist"
   },
   "minimum-stability": "stable"
 }
