Update some NPM packages

--- a/.grunt/.scss-lint.yml
+++ b/.grunt/.scss-lint.yml
@@ -116,7 +116,7 @@ linters:
 
   SelectorFormat:
     enabled: true
-    convention: hyphenated_lowercase # or 'BEM', or 'hyphenated_BEM', or 'snake_case', or 'camel_case', or a regex pattern
+    convention: hyphenated_BEM # or 'BEM', or 'hyphenated_BEM', or 'snake_case', or 'camel_case', or a regex pattern
     ignored_names:
       - "tablesorter-headerAsc"
       - "tablesorter-headerDesc"
