--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "type": "project",
   "require": {
-	"raveren/kint": "~0.9",
 	"laravel/framework": "4.2.*",
 	"rcrowe/twigbridge": "~0.6",
 	"anahkiasen/arrounded": "~0.4.1",
@@ -20,7 +19,8 @@
 	"codeception/codeception": "~2.0",
 	"barryvdh/laravel-ide-helper": "~1.11",
 	"doctrine/dbal": "~2.4",
-	"barryvdh/laravel-debugbar": "~1.8"
+	"barryvdh/laravel-debugbar": "~1.8",
+    "symfony/var-dumper": "~2.6"
   },
   "autoload": {
 	"classmap": [
