--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
   "type": "project",
   "require": {
 	"laravel/framework": "4.2.*",
-	"rcrowe/twigbridge": "~0.6",
-	"anahkiasen/arrounded": "~0.4.1",
-	"bugsnag/bugsnag-laravel": "~1.1"
+    "rcrowe/twigbridge": "0.6.*",
+    "anahkiasen/arrounded": "0.5.*",
+    "bugsnag/bugsnag-laravel": "~1.3"
   },
   "require-dev": {
-	"fabpot/php-cs-fixer": "~1.2",
-	"way/generators": "~2.6",
-	"codeception/codeception": "~2.0",
-	"barryvdh/laravel-ide-helper": "~1.11",
-	"doctrine/dbal": "~2.4",
-	"barryvdh/laravel-debugbar": "~1.8",
+    "fabpot/php-cs-fixer": "~1.4",
+    "way/generators": "~2.6",
+    "codeception/codeception": "~2.0",
+    "barryvdh/laravel-ide-helper": "~1.11",
+    "doctrine/dbal": "~2.5",
+    "barryvdh/laravel-debugbar": "~1.8",
     "symfony/var-dumper": "~2.6"
   },
   "autoload": {
