--- a/.grunt/.scss-lint.yml
+++ b/.grunt/.scss-lint.yml
@@ -84,10 +84,10 @@ linters:
 
   NestingDepth:
     enabled: true
-    max_depth: 6
+    max_depth: 5
 
   PlaceholderInExtend:
-    enabled: false
+    enabled: true
 
   PropertyCount:
     enabled: false
@@ -95,14 +95,14 @@ linters:
     max_properties: 10
 
   PropertySortOrder:
-    enabled: true
+    enabled: false
     order: concentric
     ignore_unspecified: false
     separate_groups: false
 
   PropertySpelling:
     enabled: true
-    extra_properties: ['break-inside']
+    extra_properties: []
 
   QualifyingElement:
     enabled: true
@@ -117,17 +117,6 @@ linters:
   SelectorFormat:
     enabled: true
     convention: hyphenated_BEM # or 'BEM', or 'hyphenated_BEM', or 'snake_case', or 'camel_case', or a regex pattern
-    ignored_names:
-      - "tablesorter-headerAsc"
-      - "tablesorter-headerDesc"
-      - "noUi-horizontal"
-      - "noUi-origin"
-      - "noUi-handle"
-      - "noUi-horizontal"
-      - "nivoSlider"
-      - "nivo-controlNav"
-      - "ace_editor"
-      - "current_date"
 
   Shorthand:
     enabled: true
@@ -166,7 +155,7 @@ linters:
     enabled: true
 
   TrailingZero:
-    enabled: false
+    enabled: true
 
   UnnecessaryMantissa:
     enabled: true
@@ -184,11 +173,11 @@ linters:
     enabled: false
     properties: []
 
-  VendorPrefixes:
+  VendorPrefix:
     enabled: true
     identifier_list: base
-    include: []
-    exclude: []
+    additional_identifiers: []
+    excluded_identifiers: []
 
   ZeroUnit:
     enabled: true
