--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "project",
+  "repository": "http://github.com/madewithlove/project",
   "dependencies": {
     "bower": "^1.3.10",
-    "glob": "^4.0.5",
+    "glob": "^5.0.3",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13"
-  },
-  "devDependencies": {
     "grunt-angular-gettext": "^2.0.1",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^2.0.0",
-    "grunt-bower-task": "^0.4.0",
+    "grunt-autoprefixer": "^3.0.0",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-newer": "^1.1.0",
+    "grunt-ng-annotate": "^0.10.0",
+    "grunt-shell": "^1.1.1",
+    "grunt-typescript": "^0.6.1",
+    "grunt-usemin": "^3.0.0",
+    "grunt-webfont": "^0.4.8",
+    "jit-grunt": "^0.9.0",
+    "typescript": "^1.4.1"
+  },
+  "devDependencies": {
+    "grunt-aglio": "^0.3.1",
     "grunt-contrib-csslint": "^0.4.0",
-    "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscss": "^0.6.2",
     "grunt-dredd": "^0.1.2",
-    "grunt-html-angular-validate": "^0.4.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^0.9.2",
     "grunt-phplint": "^0.0.5",
     "grunt-phpunit": "^0.3.5",
     "grunt-scss-lint": "^0.3.3",
-    "grunt-shell": "^1.1.1",
     "grunt-styleguide": "^0.2.15",
     "grunt-tslint": "^2.0.0",
-    "grunt-typescript": "^0.6.1",
-    "grunt-usemin": "^3.0.0",
-    "grunt-webfont": "^0.5.1",
-    "jit-grunt": "^0.9.0",
-    "tsd": "^0.5.7",
-    "typescript": "^1.4.1"
+    "tsd": "^0.5.7"
   }
 }
