Updated comments with link for local machines ip lists.

--- a/vagrant/skeletor-config.yaml
+++ b/vagrant/skeletor-config.yaml
@@ -1,8 +1,10 @@
 ---
-# change - make 'xxx' unique across projects
+# Change - make 'xxx' unique across projects.
+# And and the chosen ip for this project on at:
+# https://madewithlove.atlassian.net/wiki/display/DT/Vagrant+boxes+hostname+list
 ip: "192.168.57.100"
 
- # change to your project name
+ # Change to your project name
 projectname: "projectname"
 
 ports:
