--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,21 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "anahkiasen/arrounded": "^0.6",
+        "bugsnag/bugsnag-laravel": "^1.4",
+        "laravel/framework": "5.1.*",
+        "rcrowe/twigbridge": "^0.7"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "barryvdh/laravel-debugbar": "^2.0",
+        "barryvdh/laravel-ide-helper": "^2.0",
+        "codeception/codeception": "^2.0",
+        "fabpot/php-cs-fixer": "^1.7",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^0.9",
+        "phpunit/phpunit": "^4.0",
+        "phpspec/phpspec": "^2.1",
+        "way/generators": "^3.0"
     },
     "autoload": {
         "classmap": [
