--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,20 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"rcrowe/twigbridge": "0.7.*",
+		"anahkiasen/arrounded": "0.6.*",
+		"bugsnag/bugsnag-laravel": "~1.4"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"fabpot/php-cs-fixer": "~1.7",
+		"way/generators": "~3.0",
+		"codeception/codeception": "~2.0",
+		"barryvdh/laravel-ide-helper": "~2.0",
+		"barryvdh/laravel-debugbar": "~2.0",
+		"symfony/var-dumper": "~2.6"
 	},
 	"autoload": {
 		"classmap": [
