--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "codeception/codeception": "^2.0",
         "fabpot/php-cs-fixer": "^1.7",
         "fzaninotto/faker": "^1.4",
+        "laracasts/generators": "^1.1",
         "mockery/mockery": "^0.9",
         "phpunit/phpunit": "^4.0",
-        "phpspec/phpspec": "^2.1",
-        "way/generators": "^3.0"
+        "phpspec/phpspec": "^2.1"
     },
     "autoload": {
         "classmap": [
