--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
 		"phpunit/phpunit": "~4.0",
 		"phpspec/phpspec": "~2.1",
 		"fabpot/php-cs-fixer": "~1.7",
-		"way/generators": "~3.0",
 		"codeception/codeception": "~2.0",
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"barryvdh/laravel-debugbar": "~2.0",
-		"symfony/var-dumper": "~2.6"
+		"symfony/var-dumper": "~2.6",
+		"laracasts/generators": "~1.1"
 	},
 	"autoload": {
 		"classmap": [
