Add placeholder files for image baking

--- a/vagrant/skeletor-config.yaml
+++ b/vagrant/skeletor-config.yaml
@@ -1,16 +1,15 @@
 ---
-# Change - make 'xxx' unique across projects.
-# And and the chosen ip for this project on at:
-# https://madewithlove.atlassian.net/wiki/display/DT/Vagrant+boxes+hostname+list
-ip: "192.168.56.100"
+# change - make 'xxx' unique across projects
+ip: "192.168.xx.xxx"
 
- # Change to your project name
+ # change to your project name
 projectname: "projectname"
 
+# change to kind of match the first three digits of the IP suffix for uniqueness across projects
 ports:
-    ssh: "56201"
-    web: "8000"
-    mysql: "33060"
+    ssh: "56xxx"
+    web: "8xxx"
+    mysql: "33xxx"
 
 # Set to true what you want to install on top of the base box
 elasticsearch: false
