--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
         "mockery/mockery": "^0.9",
-        "phpunit/phpunit": "^4.0"
+        "phpunit/phpunit": "^4.0",
+        "phpspec/phpspec": "^2.2"
     },
     "autoload": {
         "classmap": [
