--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.5.9",
         "anahkiasen/arrounded": "^0.6",
         "bugsnag/bugsnag-laravel": "^1.4",
-        "laravel/framework": "5.1.*",
+        "laravel/framework": "^5.1",
         "rcrowe/twigbridge": "^0.7"
     },
     "require-dev": {
@@ -41,8 +41,10 @@
             "php artisan clear-compiled",
             "php artisan optimize"
         ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
         "post-update-cmd": [
-            "php artisan clear-compiled",
             "php artisan optimize"
         ],
         "post-root-package-install": [
