--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.8",
-    "laravel-elixir": "^2.0.0"
+    "laravel-elixir": "^2.0.0",
     "grunt-aglio": "^0.3.1",
     "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-imagemin": "^0.9.2",
