--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-debugbar": "^2.2",
         "barryvdh/laravel-ide-helper": "^2.1",
         "codeception/codeception": "^2.1",
+        "ddelnano/dredd-hooks-php": "^1.1",
         "doctrine/dbal": "^2.5",
         "fabpot/php-cs-fixer": "2.0.x@dev",
         "fzaninotto/faker": "^1.5",
