--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "devDependencies": {
+    "aglio": "^2.2.0",
+    "dredd": "^1.0.5",
     "eslint": "^2.2.0",
     "eslint-config-madewithlove": "^1.1.1",
     "madewithlove-webpack-config": "^2.0.0",
@@ -12,6 +14,9 @@
     "build:production": "APP_ENV=production webpack --progress",
     "build:watch": "webpack --progress --watch",
     "lint": "eslint resources/assets/js",
-    "start": "webpack-dev-server --inline --progress"
+    "start": "webpack-dev-server --inline --progress",
+    "api:concat": "rm -f docs/api/index.apib; cat docs/api/apib/*.apib >> docs/api/index.apib",
+    "api:docs": "npm run api:concat; aglio --theme-variables flatly -i docs/api/index.apib -o public/aglio/index.html",
+    "api:test": "npm run api:concat; node dredd"
   }
 }
