--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
+        "arrounded/core": "^2.0",
         "bugsnag/bugsnag-laravel": "^1.6",
         "laravel/framework": "5.2.*",
         "lord/laroute": "^2.2",
