--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -12,7 +12,7 @@ keys:
     - ~/.ssh/id_rsa
 
 folders:
-    - map: "/Users/anahkiasen/Sites/madewithlove/skeletor"
+    - map: "."
       to: "/home/vagrant/skeletor"
 
 sites:
