--- a/composer.json
+++ b/composer.json
@@ -2,28 +2,28 @@
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "license": "proprietary",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
         "arrounded/core": "^2.0",
         "bugsnag/bugsnag-laravel": "^1.6",
         "laravel/framework": "5.2.*",
-        "lord/laroute": "^2.2",
-        "rcrowe/twigbridge": "^0.9.1"
+        "lord/laroute": "5.2.*",
+        "rcrowe/twigbridge": "^0.9.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.2",
-        "barryvdh/laravel-ide-helper": "^2.1",
-        "codeception/codeception": "^2.1",
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "codeception/codeception": "^2.2",
         "ddelnano/dredd-hooks-php": "^1.1",
         "doctrine/dbal": "^2.5",
-        "fabpot/php-cs-fixer": "dev-master",
-        "fzaninotto/faker": "^1.5",
+        "friendsofphp/php-cs-fixer": "dev-master",
+        "fzaninotto/faker": "^1.6",
         "laracasts/generators": "^1.1",
         "laravel/homestead": "^3.0",
-        "mockery/mockery": "0.9.*",
-        "phpspec/phpspec": "^2.4"
+        "mockery/mockery": "^0.9.5",
+        "phpspec/phpspec": "^2.5"
     },
     "autoload": {
         "classmap": [
