Making sure we at least have a hello world

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ docs/api/index.apib
 tests/codeception/_output
 *.sqlite_snapshot
 resources/assets/js/routes.js
+/storage/*.key
+/public/storage
 
 # Assets
 *.css.map
