--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "arrounded/core": "^2.0",
         "bugsnag/bugsnag-laravel": "^1.6",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
+        "laravel/tinker": "~1.0",
         "lord/laroute": "2.4.*",
         "rcrowe/twigbridge": "^0.9.2"
     },
@@ -35,19 +36,17 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
         "ide": [
