--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "license": "proprietary",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.0",
         "arrounded/core": "^2.0",
         "bugsnag/bugsnag-laravel": "^1.6",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*@dev",
         "laravel/tinker": "~1.0",
         "lord/laroute": "2.4.*",
-        "rcrowe/twigbridge": "^0.9.2"
+        "rcrowe/twigbridge": "0.10.x@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.2",
