--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql
-DB_HOST=mwl
+DB_HOST=db
 DB_DATABASE=mwl
 DB_USERNAME=mwl
 DB_PASSWORD=secret
